# pacman-opengl

./: CMakeLists.txt  vcpkg.json
engine/: CMakeLists.txt  engine.cppm
engine/shaders/main/: main.frag  main.vert
engine/shaders/simple/: simple.frag  simple.vert
engine/src/camera/: camera.cpp  camera.cppm
engine/src/camera/top/: TopCamera.cpp  TopCamera.cppm
engine/src/entity/: entity.cpp  entity.cppm
engine/src/entity/player/: player.cpp  player.cppm
engine/src/renderable/: renderable.cppm
engine/src/renderable/points/: points.cpp  points.cppm
engine/src/renderable/rectangle/: rectangle.cpp  rectangle.cppm
engine/src/renderable/sprite/: sprite.cpp  sprite.cppm
engine/src/renderable/text/: text.cpp  text.cppm
engine/src/renderable/vectors/: vectors.cpp  vectors.cppm
engine/src/renderer/: renderer.cppm
engine/src/renderer/main/: main_renderer.cpp  main_renderer.cppm
engine/src/texture/: texture.cpp  texture.cppm
engine/src/utils/: utils.cpp  utils.cppm
game/: CMakeLists.txt  game.cpp
